--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
-  "manifest_version": 1,
+  "manifest_version": 3,
   "name": "Moscownpur Post Generator",
   "version": "1.0",
-  "description": "Generates creative posts in the style of Moscownpur.",
+  "description": "Generates creative posts in the style of Moscownpur using Groq AI.",
   "permissions": [
     "clipboardWrite"
   ],
@@ -15,6 +15,6 @@
     }
   },
   "host_permissions": [
-    "http://localhost:3000/*" 
+    "https://api.groq.com/*"
   ]
 }
